--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Noppa</title>
 </head>
 <body>
+    <body>
+        <div id="container">
+            <div id="dice"><img src="./img/1.png" /></div>
+        </div>
+    </body>
     
 <script src="./Js/functions.js"></script>
 </body>
